@@ -9,7 +9,7 @@ List of items to do for FINUFFT library
 * figure out why bottom out ~ 1e-10 err for big arrays in 1d. unavoidable roundoff? small arrays get to 1e-14.
 * Checkerboard per-thread grid cuboids, compare speed in 2d and 3d against current 1d slicing. See cnufftspread:set_thread_index_box()
 * decide to cut down intermediate copies of input data eg xj -> xp -> xjscal -> xk2 to save RAM in large problems?
-* single-prec compile option for RAM-intensive problems?
+* single-prec compile option for RAM-intensive problems? priority?
 * test BIGINT -> long long slows any array access down, or spreading? allows I/O sizes (M, N1*N2*N3) > 2^31. Note June-Yub int*8 in nufft-1.3.x slowed things by factor 2-3.
 * matlab wrappers, mcwrap issue w/ openmp, mex, and subdirs. Ship mex executables for linux, osx, etc. Link to .a
 * matlab wrappers need ier output?
@@ -28,4 +28,4 @@ List of items to do for FINUFFT library
 * package RPM and .deb for linux
 * figure out how to set up path to link to shared library - rpath?
 * make C interface example1d1c cleaner, ie remove _Complex, why needs g++ to compile?
-* add all unit tests to check_finufft.sh
+* extend dumbinputs to 2d, 3d.
